# semantic_mesh_localization

./: CMakeLists.txt  README.md  package.xml  rgbhist.py
Cityscape_model/: events.out.tfevents.1603615796.lucida  events.out.tfevents.1603615801.lucida  model.pbtxt  nodes.yaml  quantized.pb
config/: cnn_cfg.yaml  point_localization.rviz  semantic_mesh_localization.rviz  test_building_map.rviz  test_image_segmentation.rviz
include/semantic_mesh_localization/: .pointcloud_to_mesh.h.swp  bonnet.hpp  bonnet_handler.hpp  mesh_localization.h  netTRT.hpp  point_localization.h  pointcloud_to_mesh.h  util.h  util_verify_localization.h  verify_cal_likelihood.h  verify_localization.h  verify_robust_change.h
launch/: .pointcloud_to_mesh.launch.swp  point_localization.launch  pointcloud_to_mesh.launch  rosbag2mp4.launch  semantic_mesh_localization.launch  test_building_map.launch  test_image_segmentation.launch  verify_cal_likelihood.launch  verify_localization.launch  verify_robust_change.launch
output_data/: biased_odom.csv  estimated.csv  groundtruth.csv  odometry.csv
output_data/2020_11_26_1400/: estimated.csv  odometry.csv
output_data/2020_11_27_1200/: estimated.csv  groundtruth.csv  memo.txt  odometry.csv
output_data/2020_11_27_1600/: estimated.csv  groundtruth.csv  memo.txt
output_data/2020_11_30_1800/: estimated.csv  groundtruth.csv  odometry.csv  semantic_mesh_localization.txt
output_data/2020_12_07_1100/: groundtruth.csv
output_data/past_data/2020_11_26_1400/: groundtruth.csv
output_data/past_data/2020_11_27_1600/: odometry.csv
output_data/past_data/2020_11_30_1800/: memo.txt
output_data/past_data/2020_12_07_1030/: estimated.csv  groundtruth.csv  memo.txt  odometry.csv  semantic_mesh_localization.txt
output_data/sequence00_1219_1400/: biased_odom.csv  estimated.csv  groundtruth.csv  memo.txt  odometry.csv  semantic_mesh_localization.txt
output_data/sequence00_1219_1700/: groundtruth.csv  memo.txt  odometry.csv
output_data/sequence00_1219_1700_b/: biased_odom.csv  estimated.csv  memo.txt
output_data/sequence00_1219_1900_b/: biased_odom.csv  estimated.csv  groundtruth.csv  memo.txt  odometry.csv  semantic_mesh_localization.txt
output_data/sequence00_1222_1230/: biased_odom.csv  estimated.csv  groundtruth.csv  memo.txt  odometry.csv  semantic_mesh_localization.txt
output_data/sequence00_1222_1330/: biased_odom.csv  estimated.csv  groundtruth.csv  memo.txt  odometry.csv  semantic_mesh_localization.txt
output_data/sequence00_12_07_1200/: estimated.csv  odometry.csv  semantic_mesh_localization.txt
output_data/sequence00_12_16_1100/: biased_odom.csv  estimated.csv  groundtruth.csv  memo.txt  odometry.csv  semantic_mesh_localization.txt
output_data/sequence00_12_16_1200/: biased_odom.csv  estimated.csv  groundtruth.csv  odometry.csv
output_data/sequence05_12_08_1400/: estimated.csv  groundtruth.csv  memo.txt  odometry.csv  semantic_mesh_localization.txt
src/: .pointcloud_to_mesh.cpp.swp  bonnet_node.cpp  mesh_localization_node.cpp  point_localization_node.cpp  pointcloud_to_mesh.cpp  verify_cal_likelihood_node.cpp  verify_localization_node.cpp  verify_robust_change_node.cpp
src/lib/: .pointcloudtomesh.cpp.swp  CMakeLists.txt  bonnet.cpp  bonnet_handler.cpp  meshlocalization.cpp  net.cpp  netTF.cpp  netTRT.cpp  pointcloudtomesh.cpp  pointlocalization.cpp  verifycallikelihood.cpp  verifylocalization.cpp  verifyrobustchange.cpp
